Updating master branch

--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
   <div class="header">
 
     <img src="images/logoBig.png" alt="A cake on plate">
-    <p>We provide the best food</p>
-    <p>At the right price</p>
+    <p>We Provide The Best Food</p>
+    <p>At The <strong>Right Price</strong></p>
   </div>
 
 
   <div class="row">
     <div class="col-md-3">
-      <p id="hh">Happy Hour</p>
+      <p id="hh"><strong>Happy Hour</strong></p>
 
-      <p id="pt">Party Time</p>
+      <p id="pt"><strong>Party Time</strong></p>
     </div>
 
     <div class="col-md-3">
-      <p id="bf">Breakfast</p>
+      <p id="bf"><strong>Breakfast</strong></p>
     </div>
 
     <div class="col-md-3">
-      <p id="lh">Lunch</p>
+      <p id="lh"><strong>Lunch</strong></p>
     </div>
 
     <div class="col-md-3">
-      <p id="dr">Dinner</p>
+      <p id="dr"><strong>Dinner</strong></p>
     </div>
   </div>
 
@@ -111,22 +111,45 @@
 
         <div class="col-md-4">
           <img src="images\assets\fastfood\chickenBurger.jpg" alt="fast food">
-          <h5><strong>Chicken Burger</strong></h5>
+          <h6><strong>Chicken Burger</strong></h6>
         </div>
 
         <div class="col-md-4">
           <img src="images\assets\fastfood\beefBurger.jpg" alt="burger">
-          <h5><strong>Beef Burger</strong></h5>
+          <h6><strong>Beef Burger</strong></h6>
         </div>
 
         <div class="col-md-4">
           <img src="images\assets\fastfood\chickenPizza.jpg" alt="pizza">
-          <h5><strong>Chicken Pizza</strong></h5>
+          <h6><strong>Chicken Pizza</strong></h6>
         </div>
       </div>
 
     </div>
   </div>
+
+  <div class="part5">
+    <div class="container part5a">
+      <div class="col-md-7">
+        <h3 id="hc"><strong>Our Happy Customers</srong></h3>
+        <h4><strong>George Richard</srong></h4>
+        <h4>Great food! Menu is aewsome, there foods are not only great but also in the right price. I'll highly recommend them:)</h4>
+        <img src="images\assets\customers\p1.png" alt="customer 1"> <img src="images\assets\customers\p2.png" alt="customer 2"> <img src="images\assets\customers\p3.png" alt="customer 3">
+
+      </div>
+      <div class="col-md-5">
+        <h3 id="am"><strong>About Menu</strong></h3>
+        <h4>We are menu a little team of 7 members. Ut wisi enim ad minim veniam, quis nos trudexer ci tation ullamcorper suscipit lob ortis nisl ut aliquip ex ea commodo conse quat. Duisau tem vel eum iriure dolor in.</h4>
+      </div>
+    </div>
+  </div>
+
+  <div class="part6">
+    <h3 id="gdt">Get our daily food items delivered to your emails</h3>
+  </div>
+  <!-- <div class="part6b">
+
+  </div> -->
 </body>
 
 </html>
