--- a/index.html
+++ b/index.html
@@ -3,27 +3,46 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <script src="js/jquery-3.2.1.min.js"></script>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" <media="all">
+  <!-- </math>> -->
+  <script src="js/jquery-3.2.1.js"></script>
   <script src="js/scripts.js"></script>
 
-  <title>OHGA's Kitchen | Home</title>
+  <title> <img src="images\assets\footerlogos\logo_white.png" alt="logo">OHGA's Kitchen | Home</title>
 </head>
 
 <body>
-  <div class="header">
+  <div class="part1header">
+
+    <!-- <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">WebSiteName</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <li><a href="#">Page 1</a></li>
+            <li><a href="#">Page 2</a></li>
+            <li><a href="#">Page 3</a></li>
+        </ul>
+      </div>
+    </nav> -->
+
+
+
+
 
     <img src="images/logoBig.png" alt="A cake on plate">
     <p>We Provide The Best Food</p>
     <p>At The <strong>Right Price</strong></p>
   </div>
 
-
   <div class="row">
     <div class="col-md-3">
-      <p id="hh"><strong>Happy Hour</strong></p>
+      <p id="part2hh"><strong>Happy Hour</strong></p>
 
       <p id="pt"><strong>Party Time</strong></p>
     </div>
@@ -124,7 +143,6 @@
           <h6><strong>Chicken Pizza</strong></h6>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -145,11 +163,31 @@
   </div>
 
   <div class="part6">
-    <h3 id="gdt">Get our daily food items delivered to your emails</h3>
-  </div>
-  <!-- <div class="part6b">
 
-  </div> -->
+    <div class="container">
+      <h3 id="gdt">Get our daily food items delivered to your emails</h3>
+      <form id="frm" class="form-inline" action="/action_page.php">
+        <div class="form-group">
+          <input type="email" class="form-control" id="email" placeholder="Your email" name="email">
+        </div>
+        <button type="submit" class="btn btn-default">Subscribe</button>
+      </form>
+    </div>
+  </div>
+  <div class="part6b">
+    <div class="container">
+      <p id="mn"> <img src="images\assets\footerlogos\logo_white.png" alt="logo"> MENU
+      </p>
+      <p id="wht">Thats what we Are</p>
+      <br>
+      <br>
+      <img src="images\assets\footerlogos\facebook.png" alt="facebook"> <img src="images\assets\footerlogos\twitter.png" alt="twitter"> <img src="images\assets\footerlogos\pinterest.png" alt="pinterest">
+      <br>
+      <br>
+      <br>
+      <br>
+      <p>2016 Menu Restaurant</p>
+    </div>
 </body>
 
 </html>
